[package]
name = "glsp"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.0"
group = "0.13.0"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
zeroize = "1.8.1"
subtle = "2.4"

[dev-dependencies]
curve25519-dalek = { version = "4.1.1", features = ["serde", "group", "rand_core"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "statement_benchmarks"
harness = false
